Refactored winner methods

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ float:left;
   border-color: #6699FF;
   border-style:solid;
   border-width:1px;
-  background-image:url('blue.jpg');
+  background-image:url('hal_sm2.jpg');
 }
 
 .otile
@@ -40,6 +40,10 @@ body {
   left:20%;
   top:5%;
   font-family: Futura, "Trebuchet MS", Arial, sans-serif;
+}
+body.gameover {
+  background-color:black;
+  
 }
 #instructions {
   color:orange;
