--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ float:left;
 
 .otile
 {
-  background-image: url('orange.jpg');
+  background-image: url('cat_sm.jpeg');
   border-color: orange;
   border-style:solid;
   border-width:1px;
